syntax = "proto3";
package celestia.blob.v1;

option go_package = "github.com/celestiaorg/celestia-app/x/blob/types";

// EventPayForBlobs defines an event that is emitted after a PayForBlobs has
// been processed.
message EventPayForBlobs {
  string signer = 1;
  repeated uint32 blob_sizes = 2;
  // 3 was previously used for namespaces
  reserved 3;
}
